fix alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -382,6 +382,10 @@ nav > a {
   max-width: 300px;
 }
 
+.video_sessions img {
+  max-width: 300px;
+}
+
 .services i {
   color: var(--accent);
   font-size: x-large;
